# keypoints2body

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  environment.yaml  pyproject.toml  ruff.toml  smpl_fit.py  smpl_render.py
.github/workflows/: pypi-release.yml
demo/: amass_ikgat_smplx_refine.py
docs/: Makefile  api.rst  architecture.rst  body_models.rst  cli.rst  conf.py  contributing.rst  getting_started.rst  index.rst  requirements.txt  smpl_fit_tech_notes.md  usage.rst
keypoints2body/: __init__.py
keypoints2body/api/: __init__.py  frame.py  model_factory.py  sequence.py
keypoints2body/cli/: eval.py  fit_frame.py  fit_seq.py
keypoints2body/core/: __init__.py  config.py  constants.py  engine.py  losses.py  prior.py  shape.py
keypoints2body/core/estimators/: __init__.py  base.py  factory.py  optimization.py
keypoints2body/core/estimators/ikgat/: __init__.py  gan_regressor.py  inference.py  utils.py
keypoints2body/core/fitters/: __init__.py  camera_space.py  misc_models.py  world_space.py
keypoints2body/core/joints/: __init__.py  adapters.py
keypoints2body/io/: __init__.py  motion.py
keypoints2body/models/: __init__.py  smpl_data.py
src/: config.py  customloss.py  io_utils.py  prior.py  smplify.py
src/models/: smpl_data.py
tests/: test_adapters.py  test_api_surface.py  test_integration_smoke.py  test_models.py
